--- a/MAKE/Makefile.kstppd
+++ b/MAKE/Makefile.kstppd
@@ -1,7 +1,7 @@
 #Kostis Laptop
 #Compiler & Linker
-CMP = mpic++
-LNK = mpic++
+CMP = /usr/bin/mpic++
+LNK = /usr/bin/mpic++
 
 
 #======== Vectorization ==========
@@ -57,13 +57,13 @@ PAPI_FLAG =
 
 #======== Libraries ===========
 
-LIBRARY_PREFIX = $(HOME)
+LIBRARY_PREFIX =  /home/kstppd/Desktop/install_v/wrk/
 
 INC_BOOST = -I/usr/include/boost/
 LIB_BOOST = -L/usr/lib/x86_64-linux-gnu/ -lboost_program_options
 
-INC_ZOLTAN = -I$(LIBRARY_PREFIX)/include
-LIB_ZOLTAN = -L$(LIBRARY_PREFIX)/lib -lzoltan
+INC_ZOLTAN = -I$(LIBRARY_PREFIX)/zoltan/include
+LIB_ZOLTAN = -L$(LIBRARY_PREFIX)/zoltan/lib -lzoltan
 
 INC_VLSV = -I$(LIBRARY_PREFIX)/vlsv
 LIB_VLSV = -L$(LIBRARY_PREFIX)/vlsv -lvlsv
@@ -71,11 +71,15 @@ LIB_VLSV = -L$(LIBRARY_PREFIX)/vlsv -lvlsv
 INC_SILO = -I$(LIBRARY_PREFIX)/include
 LIB_SILO = -L$(LIBRARY_PREFIX)/lib -lsilo
 
-INC_PAPI = -I$(LIBRARY_PREFIX)/papi-5.4.3/src
-LIB_PAPI = -L$(LIBRARY_PREFIX)/papi-5.4.3/src -lpapi
+INC_DCCRG = -I./submodules/dccrg
 
-INC_JEMALLOC = -I$(LIBRARY_PREFIX)/libraries/jemalloc
-LIB_JEMALLOC = -L$(LIBRARY_PREFIX)/libraries/jemalloc/lib -ljemalloc
+INC_FSGRID = -I./submodules/fsgrid
+
+INC_PAPI = -I$(LIBRARY_PREFIX)/papi/include
+LIB_PAPI = -L$(LIBRARY_PREFIX)/papi/src -lpapi
+
+INC_JEMALLOC = -I$(LIBRARY_PREFIX)/jemalloc/include
+LIB_JEMALLOC = -L$(LIBRARY_PREFIX)/jemalloc/lib -ljemalloc
 
 LIB_PROFILE = -L$(LIBRARY_PREFIX)/phiprof/lib -lphiprof
 INC_PROFILE = -I$(LIBRARY_PREFIX)/phiprof/include
