Fix typo in CI Yaml (flixfunction)

--- a/.github/workflows/github-ci.yml
+++ b/.github/workflows/github-ci.yml
@@ -275,7 +275,7 @@ jobs:
           fluxfunction
         if-no-files-found: error
 
-  test_flixfunction:
+  test_fluxfunction:
     runs-on: carrington
     needs: [build_tools]
 
