--- a/.github/workflows/github-ci.yml
+++ b/.github/workflows/github-ci.yml
@@ -275,24 +275,6 @@ jobs:
           fluxfunction
         if-no-files-found: error
 
-  test_fluxfunction:
-    runs-on: carrington
-    needs: [build_tools]
-
-    steps:
-    - name: Download fluxfunction binary
-      uses: actions/download-artifact@v4
-      with:
-        name: vlasiator-tools
-    - name: Make binary executable
-      run: |
-        chmod +x $GITHUB_WORKSPACE/fluxfunction
-    - name: Run with a sample file and compare output
-      run: |
-        $GITHUB_WORKSPACE/fluxfunction /wrk-vakka/group/spacephysics/vlasiator/2D/ABC/bulk/bulk.0001000.vlsv $GITHUB_WORKSPACE/fluxtest.bin
-        md5sum $GITHUB_WORKSPACE/fluxtest.bin /wrk-vakka/group/spacephysics/vlasiator/2D/ABC/flux/flux.0001000.bin
-        diff -q $GITHUB_WORKSPACE/fluxtest.bin /wrk-vakka/group/spacephysics/vlasiator/2D/ABC/flux/flux.0001000.bin
-
   run_testpackage:
     # Run the testpackage on the carrington cluster
     runs-on: carrington
@@ -318,6 +300,8 @@ jobs:
         chmod +x $GITHUB_WORKSPACE/vlasiator
         chmod +x $GITHUB_WORKSPACE/vlsv*_DP
         cd testpackage
+        # Delete any old run directories
+        rm -rf run_20*
         export LD_LIBRARY_PATH=$LD_LIBRARY_PATH:$GITHUB_WORKSPACE/libraries/lib
         sbatch -W -o testpackage_run_output.txt ./small_test_carrington_github_ci.sh
         PARSE_OUTPUT_CMD=$( cat << MORO
@@ -354,6 +338,13 @@ jobs:
         path: testpackage-output.tar.gz
       # Note: Testpackage output is further processed in the pr_report.yml workflow
       # (to produce Checks against pull requests)
+    - name: Run fluxfunction test
+      run: |
+        chmod +x $GITHUB_WORKSPACE/fluxfunction
+        $GITHUB_WORKSPACE/fluxfunction run_*/Magnetosphere_small/bulk.0000001.vlsv equatorial.bin
+        $GITHUB_WORKSPACE/fluxfunction run_*/Magnetosphere_polar_small/bulk.0000001.vlsv polar.bin
+        diff -q equatorial.bin /proj/group/spacephysics/vlasiator_testpackage/CI_reference/equatorial.bin
+        diff -q polar.bin /proj/group/spacephysics/vlasiator_testpackage/CI_reference/polar.bin
 
   build_ionosphereTests:
     # Build IonosphereSolverTests miniApp
