--- a/MAKE/Makefile.lumi_gnu
+++ b/MAKE/Makefile.lumi_gnu
@@ -24,14 +24,15 @@ FLAGS =
 #GNU flags:
 CC_BRAND = gcc
 CC_BRAND_VERSION = 9.3.0
-CXXFLAGS += -g -O3 -fopenmp -funroll-loops -std=c++17 -W -Wall -Wno-unused -mfma -mavx2
+CXXFLAGS += -g -O3 -fopenmp -funroll-loops -std=c++20 -W -Wall -Wno-unused -mfma -mavx2
 testpackage: CXXFLAGS = -g -O2 -fopenmp -funroll-loops -std=c++20 -mno-fma -mno-avx2 -mno-avx
 
 MATHFLAGS = -ffast-math -fno-finite-math-only
 testpackage: MATHFLAGS = -fno-unsafe-math-optimizations
 
-LDFLAGS = -lrt -fopenmp -L./target/release/ -L/pfs/lustrep4/scratch/project_462000559/kostis/libs/zfp/build/lib64 -lmlp_compress -lzfp
+LDFLAGS = -lrt -fopenmp -L./target/release/ -L./vdf_compression/cuda_mlp/ -L/pfs/lustrep4/scratch/project_462000559/kostis/libs/zfp/build/lib64 -lmlp_compress -lzfp -lmlp_cuda_compress
 LIB_MPI = -fopenmp    
+
 
 #======== PAPI ==========
 #Add PAPI_MEM define to use papi to report memory consumption?
