--- a/.github/workflows/github-ci.yml
+++ b/.github/workflows/github-ci.yml
@@ -145,7 +145,7 @@ jobs:
     - name: Compile vlasiator (Release build)
       run: |
         VLASIATOR_ARCH=github_actions make clean
-        VLASIATOR_ARCH=github_actions make -j 3 COMPFLAGS="-DFS_1ST_ORDER_TIME "
+        VLASIATOR_ARCH=github_actions COMPFLAGS="-DFS_1ST_ORDER_TIME " make -j 3
     - name: Upload release binary
       uses: actions/upload-artifact@v4
       with:
@@ -174,7 +174,7 @@ jobs:
     - name: Compile vlasiator (Release build)
       run: |
         VLASIATOR_ARCH=github_actions make clean
-        VLASIATOR_ARCH=github_actions make -j 3 COMPFLAGS="-DFS_1ST_ORDER_SPACE "
+        VLASIATOR_ARCH=github_actions COMPFLAGS="-DFS_1ST_ORDER_SPACE " make -j 3
     - name: Upload release binary
       uses: actions/upload-artifact@v4
       with:
