--- a/.github/workflows/github-ci.yml
+++ b/.github/workflows/github-ci.yml
@@ -399,8 +399,8 @@ jobs:
     - name: Run fluxfunction test
       run: |
         chmod +x $GITHUB_WORKSPACE/fluxfunction
-        srun --job-name fluxtest -M carrington -N 1 -c 1 --mem=1G $GITHUB_WORKSPACE/fluxfunction run_*/Magnetosphere_small/bulk.0000001.vlsv equatorial.bin
-        srun --job-name fluxtest -M carrington -N 1 -c 1 --mem=1G $GITHUB_WORKSPACE/fluxfunction run_*/Magnetosphere_polar_small/bulk.0000001.vlsv polar.bin
+        srun --job-name fluxtest -M carrington -N 1 -c 1 --mem=1G "module purge; module load GCC/13.2.0; module load OpenMPI/4.1.6-GCC-13.2.0 ; module load PMIx/4.2.6-GCCcore-13.2.0; module load PAPI/7.1.0-GCCcore-13.2.0; $GITHUB_WORKSPACE/fluxfunction run_*/Magnetosphere_small/bulk.0000001.vlsv equatorial.bin"
+        srun --job-name fluxtest -M carrington -N 1 -c 1 --mem=1G "module purge; module load GCC/13.2.0; module load OpenMPI/4.1.6-GCC-13.2.0 ; module load PMIx/4.2.6-GCCcore-13.2.0; module load PAPI/7.1.0-GCCcore-13.2.0; $GITHUB_WORKSPACE/fluxfunction run_*/Magnetosphere_polar_small/bulk.0000001.vlsv polar.bin"
         diff -q equatorial.bin /proj/group/spacephysics/vlasiator_testpackage/CI_reference/equatorial.bin
         diff -q polar.bin /proj/group/spacephysics/vlasiator_testpackage/CI_reference/polar.bin
 
