Update instructions for good core thread placement on KAROLINA

--- a/MAKE/Makefile.karolina_gcc
+++ b/MAKE/Makefile.karolina_gcc
@@ -1,15 +1,30 @@
+# KAROLINA_GCC
 # Suggested modules
 #
-# ml gcc/12.2.0 openmpi/4.1.6--gcc--12.2.0
-#
-# Build libraries with ./build_libraries.sh leonardo_dcgp
+# module load GCC/13.3.0
+# module load PAPI/7.1.0-GCCcore-13.3.0
+# module load OpenMPI/5.0.3-GCC-13.3.0
+# ./build_libraries.sh karolina_gcc
+
+# Karolina CPU has 2 x 64 cores
+# For good core placement, run with:
+#  export OMP_PLACES=cores
+#  export OMP_PROC_BIND=close
+#  export SRUN_CPUS_PER_TASK=$SLURM_CPUS_PER_TASK
+# and
+#  mpirun -n $SLURM_NTASKS --map-by ppr:$SLURM_NTASKS_PER_NODE:node:PE=$OMP_NUM_THREADS --bind-to core --report-bindings $EXE $CFG
+# or (less options might do)
+#  srun --cpu-bind=cores --cpus-per-task=$OMP_NUM_THREADS
+
+CMP = mpic++
+LNK = mpic++
 
 #======== Vectorization ==========
 #Set vector backend type for vlasov solvers, sets precision and length.
 #Options:
-# AVX:	    VEC4D_AGNER, VEC4F_AGNER, VEC8F_AGNER
+# AVX:      VEC4D_AGNER, VEC4F_AGNER, VEC8F_AGNER
 # AVX512:   VEC8D_AGNER, VEC16F_AGNER
-# Fallback: VECTORCLASS = VEC_FALLBACK_GENERIC (Defaults to VECL8)
+# Fallback: VEC4D_FALLBACK, VEC4F_FALLBACK, VEC8F_FALLBACK
 
 ifeq ($(DISTRIBUTION_FP_PRECISION),SPF)
 #Single-precision
@@ -20,17 +35,14 @@ else
 endif
 
 #======== Libraries ===========
-LIBRARY_PREFIX = libraries-leonardo_dcgp
+LIBRARY_PREFIX = libraries-karolina_gcc
 
 #======= Compiler and compilation flags =========
 # NOTES on compiler flags:
 # CXXFLAGS is for compiler flags, they are always used
 # MATHFLAGS are for special math etc. flags, these are only applied on solver functions
-# LDFLAGS flags for linker (enforced via LNK command in CUDA compilation)
+# LDFLAGS flags for linker
 # Important note: Do not edit COMPFLAGS in this file!
-
-CMP = mpic++
-LNK = mpic++
 
 CXXFLAGS += -g -O3 -fopenmp -funroll-loops -std=c++17 -W -Wall -Wno-unused -fabi-version=0 -march=native -mfma -mavx2 -fpermissive
 testpackage: CXXFLAGS = -g -ggdb -O2 -fopenmp -funroll-loops -std=c++17 -fabi-version=0 -mfma -fpermissive
@@ -38,7 +50,7 @@ testpackage: CXXFLAGS = -g -ggdb -O2 -fopenmp -funroll-loops -std=c++17 -fabi-ve
 MATHFLAGS = -ffast-math -fno-finite-math-only
 testpackage: MATHFLAGS = -fno-unsafe-math-optimizations
 
-LDFLAGS = -lrt -Wl,-rpath=$(LIBRARY_PREFIX)/lib
+LDFLAGS = -lrt -Wl,-rpath=$(CURDIR)/$(LIBRARY_PREFIX)/lib
 LIB_MPI = -lgomp
 
 #======== PAPI ==========
@@ -56,11 +68,11 @@ testpackage: CXXFLAGS += -DUSE_JEMALLOC -DJEMALLOC_NO_DEMANGLE
 INC_BOOST = -isystem $(LIBRARY_PREFIX)/include
 LIB_BOOST = -L$(LIBRARY_PREFIX)/lib -lboost_program_options
 
-INC_JEMALLOC = -isystem $(LIBRARY_PREFIX)/include
-LIB_JEMALLOC = -L$(LIBRARY_PREFIX)/lib -ljemalloc
-
 INC_PAPI = -isystem $(LIBRARY_PREFIX)/include
 LIB_PAPI = -L$(LIBRARY_PREFIX)/lib -lpapi
+
+INC_JEMALLOC = -isystem $(LIBRARY_PREFIX)/include
+LIB_JEMALLOC = -L$(LIBRARY_PREFIX)/lib -ljemalloc
 
 INC_ZOLTAN = -isystem /$(LIBRARY_PREFIX)/include
 LIB_ZOLTAN = -L$(LIBRARY_PREFIX)/lib -lzoltan
