--- a/MAKE/Makefile.kstppd
+++ b/MAKE/Makefile.kstppd
@@ -90,7 +90,5 @@ INC_EIGEN = -isystem ./submodules/eigen/
 INC_ZFP = -I/home/kstppd/software/zfp/include/
 LIB_ZFP = -L/home/kstppd/software/zfp/build/lib
 
-INC_OCTREE_COMPRESSOR = -I/home/kstppd/software/vdf_octrees/
-LIB_OCTREE_COMPRESSOR=-L/home/kstppd/software/vdf_octrees/build -loctree_compressor
-
-
+INC_OCTREE_COMPRESSOR = -I./vdf_compression/include
+LIB_OCTREE_COMPRESSOR=-L./vdf_compression/lib -ltoctree_compressor
