--- a/.github/workflows/github-ci.yml
+++ b/.github/workflows/github-ci.yml
@@ -182,7 +182,6 @@ jobs:
         path: vlasiator
         if-no-files-found: error
 
-
   build_testpackage:
     # Build Vlasiator with testpackage flags, on the carrington cluster
     # (for subsequent running of the integration test package)
@@ -227,6 +226,46 @@ jobs:
     #  with:
     #    name: Testpackage build log
     #    path: build.log
+
+  build_testpackage_ukkoGPU:
+   # Build Vlasiator with testpackage flags, on the ukko cluster using
+   # it's nvidia gpus
+   runs-on: carrington
+
+   steps:
+    - name: Clean workspace
+      run: |
+        RUN_STRING=$( cat << MORO
+        rm -rf libraries library-build testpackage
+        rm -f libraries.tar.zst testpackage_check_description.txt testpackage-output.tar.gz metrics.txt stdout.txt stderr.txt testpackage_output_variables.txt
+        rm -f *.xml
+        MORO
+        )
+        srun -M ukko bash -c "$RUN_STRING"
+    - name: Checkout source
+      uses: actions/checkout@v4
+      with:
+        submodules: true
+    - name: Make clean
+      run: VLASIATOR_ARCH=ukko_cuda make clean
+    - uses: ursg/gcc-problem-matcher@master
+    - name: Compile vlasiator (Testpackage build w/ CUDA)
+      run: |
+        export VLASIATOR_ARCH=ukko_cuda
+        srun -Mukko -pgpu-oversub --cpus-per-gpu=8 --mem-per-gpu=20G --job-name CI_tp_compile --interactive --nodes=1 -n 1 -c 16 -t 1:00:0 bash -c 'module purge; module load GCC/13.2.0; module load OpenMPI/4.1.6-GCC-13.2.0 ; module load PMIx/4.2.6-GCCcore-13.2.0; module load PAPI/7.1.0-GCCcore-13.2.0; module load CUDA; export VLASIATOR_ARCH=ukko_cuda; make -j 9 testpackage; sleep 10s'
+    - name: Make sure the output binary is visible in lustre
+      uses: nick-fields/retry@v3
+      with:
+        timeout_seconds: 15
+        max_attempts: 3
+        retry_on: error
+        command: ls vlasiator
+    - name: Upload testpackage binary
+      uses: actions/upload-artifact@v4
+      with:
+        name: vlasiator-testpackage-gpu
+        path: vlasiator
+        if-no-files-found: error
 
   build_riscv:
     runs-on: risc-v
