--- a/.github/workflows/github-ci.yml
+++ b/.github/workflows/github-ci.yml
@@ -436,7 +436,7 @@ jobs:
   run_testpackage_gpu:
     # Run the testpackage on the carrington cluster
     runs-on: carrington
-    needs: [build_testpackage_gpu, build_tools]
+    needs: [build_testpackage_ukkoGPU, build_tools]
     continue-on-error: true
 
     steps:
@@ -485,7 +485,7 @@ jobs:
         timeout_seconds: 15
         max_attempts: 3
         retry_on: error
-        command: ls $GITHUB_WORKSPACE/testpackage-output.tar.gz
+        command: ls $GITHUB_WORKSPACE/testpackage-output-gpu.tar.gz
     - name: Upload testpackage output
       uses: actions/upload-artifact@v4
       if: always()
