--- a/.github/workflows/pr_report_gpu.yml
+++ b/.github/workflows/pr_report_gpu.yml
@@ -8,7 +8,7 @@ permissions:
   checks: write
 
 jobs:
-  testpackage_report:
+  testpackage_report_ukkoGPU:
     runs-on: ubuntu-latest
     steps:
       - name: download testpackage output
@@ -16,13 +16,13 @@ jobs:
         # *different* workflow here.
         uses: ursg/action-download-artifact@v2
         with:
-          name: testpackage-output
+          name: testpackage-output-ukkoGPU
           workflow: ${{ github.event.workflow.id }}
           run_id: ${{ github.event.workflow_run.id }}
       - name: unpack and process pr output
         id: unpack
         run: |
-          tar -xzvf testpackage-output.tar.gz
+          tar -xzvf testpackage-output-ukkoGPU.tar.gz
           cat testpackage_output_variables.txt >> $GITHUB_OUTPUT
           # Limit Report filesize, as github only allows 64k PR reports
           truncate --size='<60K' testpackage_check_description.txt
@@ -32,16 +32,8 @@ jobs:
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           sha: ${{github.event.workflow_run.head_sha}}
-          name: Testpackage result
+          name: Testpackage Ukko-GPU result
           conclusion: ${{ steps.unpack.outputs.conclusion }}
           output: |
-            {"title": "Testpackage result", "summary":"${{ steps.unpack.outputs.summary }}"}
-          output_text_description_file: testpackage_check_description.txt
-
-     ## No need to bother with JUnit reports if the check runs work
-     #- name: Build test report
-     #  uses: mikepenz/action-junit-report@v3
-     #  with:
-     #    report_paths: 'testpackage_output_junit*.xml'
-     #    detailed_summary: true
-     #    include_passed: true
+            {"title": "Testpackage Ukko-GPU result", "summary":"${{ steps.unpack.outputs.summary }}"}
+          output_text_description_file: testpackage_ukkoGPU_check_description.txt
