--- a/MAKE/Makefile.puhti_gcc_cuda
+++ b/MAKE/Makefile.puhti_gcc_cuda
@@ -13,7 +13,7 @@
 #Options:
 # AVX:	    VEC4D_AGNER, VEC4F_AGNER, VEC8F_AGNER
 # AVX512:   VEC8D_AGNER, VEC16F_AGNER
-# Fallback: VECTORCLASS = VEC_FALLBACK_GENERIC (Defaults to VECL8)
+# Fallback: VECTORCLASS = VEC_FALLBACK_GENERIC
 
 ifeq ($(DISTRIBUTION_FP_PRECISION),SPF)
 #Single-precision
