--- a/.github/workflows/github-ci.yml
+++ b/.github/workflows/github-ci.yml
@@ -467,67 +467,67 @@ jobs:
       # Note: Testpackage output is further processed in the pr_report.yml workflow
       # (to produce Checks against pull requests)
 
-  run_testpackage_ukkoGPU:
-    # Run the testpackage on the Ukko GPU cluster (via Carrington frontend)
-    runs-on: carrington
-    needs: [build_testpackage_ukkoGPU, build_tools_ukkoGPU]
-    continue-on-error: true
+  # run_testpackage_ukkoGPU:
+  #   # Run the testpackage on the Ukko GPU cluster (via Carrington frontend)
+  #   runs-on: carrington
+  #   needs: [build_testpackage_ukkoGPU, build_tools_ukkoGPU]
+  #   continue-on-error: true
 
-    steps:
-    - name: Checkout source
-      uses: actions/checkout@v4
-      with:
-        submodules: false
-    - name: Download testpackage binary
-      uses: actions/download-artifact@v4
-      with:
-        name: vlasiator-testpackage-ukkoGPU
-    - name: Download tools
-      uses: actions/download-artifact@v4
-      with:
-        name: vlasiator-tools-ukkoGPU
-    - name: Run GPU testpackage
-      id: run
-      run: |
-        chmod +x $GITHUB_WORKSPACE/vlasiator
-        chmod +x $GITHUB_WORKSPACE/vlsv*_DP
-        cd testpackage
-        export LD_LIBRARY_PATH=$LD_LIBRARY_PATH:$GITHUB_WORKSPACE/libraries/lib
-        sbatch -W -o testpackage_run_output.txt ./small_test_ukko_gpu_github_ci.sh
-        PARSE_OUTPUT_CMD=$( cat << MORO
-        echo "Job finished, checking output."
-        cat testpackage_run_output.txt
-        cat $GITHUB_STEP_SUMMARY > $GITHUB_WORKSPACE/testpackage_check_description.txt
-        cd $GITHUB_WORKSPACE
-        ls -halB testpackage_check_description.txt
-        tar -czf testpackage-output-ukkoGPU.tar.gz testpackage_check_description.txt testpackage_output_variables.txt
-        MORO
-        )
-        srun --job-name CI_package_results -M ukko -N 1 -c 1 --mem=1G bash -c "$PARSE_OUTPUT_CMD"
-        if [ -f $GITHUB_WORKSPACE/testpackage_failed ]; then
-          # Fail this step if any test failed.
-          exit 1
-        fi
-    - name: Scancel dangling job upon cancellation
-      if: cancelled()
-      run: |
-        # Try accessing the job id echoed by the job script.
-        scancel ${{ steps.run.outputs.SLURM_JOB_ID }}
-    - name: Make sure the output tarball is visible in lustre
-      uses: nick-fields/retry@v3
-      with:
-        timeout_seconds: 15
-        max_attempts: 3
-        retry_on: error
-        command: ls $GITHUB_WORKSPACE/testpackage-output-ukkoGPU.tar.gz
-    - name: Upload testpackage output
-      uses: actions/upload-artifact@v4
-      if: always()
-      with:
-        name: testpackage-output-ukkoGPU
-        path: testpackage-output-ukkoGPU.tar.gz
-      # Note: Testpackage output is further processed in the pr_report.yml workflow
-      # (to produce Checks against pull requests)
+  #   steps:
+  #   - name: Checkout source
+  #     uses: actions/checkout@v4
+  #     with:
+  #       submodules: false
+  #   - name: Download testpackage binary
+  #     uses: actions/download-artifact@v4
+  #     with:
+  #       name: vlasiator-testpackage-ukkoGPU
+  #   - name: Download tools
+  #     uses: actions/download-artifact@v4
+  #     with:
+  #       name: vlasiator-tools-ukkoGPU
+  #   - name: Run GPU testpackage
+  #     id: run
+  #     run: |
+  #       chmod +x $GITHUB_WORKSPACE/vlasiator
+  #       chmod +x $GITHUB_WORKSPACE/vlsv*_DP
+  #       cd testpackage
+  #       export LD_LIBRARY_PATH=$LD_LIBRARY_PATH:$GITHUB_WORKSPACE/libraries/lib
+  #       sbatch -W -o testpackage_run_output.txt ./small_test_ukko_gpu_github_ci.sh
+  #       PARSE_OUTPUT_CMD=$( cat << MORO
+  #       echo "Job finished, checking output."
+  #       cat testpackage_run_output.txt
+  #       cat $GITHUB_STEP_SUMMARY > $GITHUB_WORKSPACE/testpackage_check_description.txt
+  #       cd $GITHUB_WORKSPACE
+  #       ls -halB testpackage_check_description.txt
+  #       tar -czf testpackage-output-ukkoGPU.tar.gz testpackage_check_description.txt testpackage_output_variables.txt
+  #       MORO
+  #       )
+  #       srun --job-name CI_package_results -M ukko -N 1 -c 1 --mem=1G bash -c "$PARSE_OUTPUT_CMD"
+  #       if [ -f $GITHUB_WORKSPACE/testpackage_failed ]; then
+  #         # Fail this step if any test failed.
+  #         exit 1
+  #       fi
+  #   - name: Scancel dangling job upon cancellation
+  #     if: cancelled()
+  #     run: |
+  #       # Try accessing the job id echoed by the job script.
+  #       scancel ${{ steps.run.outputs.SLURM_JOB_ID }}
+  #   - name: Make sure the output tarball is visible in lustre
+  #     uses: nick-fields/retry@v3
+  #     with:
+  #       timeout_seconds: 15
+  #       max_attempts: 3
+  #       retry_on: error
+  #       command: ls $GITHUB_WORKSPACE/testpackage-output-ukkoGPU.tar.gz
+  #   - name: Upload testpackage output
+  #     uses: actions/upload-artifact@v4
+  #     if: always()
+  #     with:
+  #       name: testpackage-output-ukkoGPU
+  #       path: testpackage-output-ukkoGPU.tar.gz
+  #     # Note: Testpackage output is further processed in the pr_report.yml workflow
+  #     # (to produce Checks against pull requests)
 
   build_ionosphereTests:
     # Build IonosphereSolverTests miniApp
