--- a/testpackage/tests/Flowthrough_damr/Flowthrough_damr.cfg
+++ b/testpackage/tests/Flowthrough_damr/Flowthrough_damr.cfg
@@ -17,9 +17,22 @@ adapt_refinement = 1
 use_alpha1 = 1
 use_alpha2 = 1
 refine_cadence = 2
-refinement_min_x = -3e7
+
+number_of_refine_boxes = 2
+
+refinement_max_x = 4e7
+refinement_max_y = 1e7
+refinement_max_z = 1e7
+refinement_min_x = 0 
 refinement_min_y = 0
-refinement_max_z = 0
+refinement_min_z = 0
+
+refinement_max_x = 0
+refinement_max_y = 0            
+refinement_max_z = 0            
+refinement_min_x = -4e7              
+refinement_min_y = -1e7           
+refinement_min_z = -1e7
 
 [gridbuilder]
 x_length = 16
