--- a/testpackage/tests/Flowthrough_damr/Flowthrough_damr.cfg
+++ b/testpackage/tests/Flowthrough_damr/Flowthrough_damr.cfg
@@ -23,6 +23,9 @@ number_of_refine_boxes = 1
 refinement_min_x = -3e7
 refinement_min_y = 0
 refinement_max_z = 0
+refinement_max_x = 1e20
+refinement_max_y = 1e20
+refinement_min_z = -1e20
 
 [gridbuilder]
 x_length = 16
