Add mnist unit test as mini app

--- a/mini-apps/tinyAI_tests/Makefile
+++ b/mini-apps/tinyAI_tests/Makefile
@@ -9,6 +9,7 @@ TORCH_LD_FLAGS=-L/home/kstppd/software/libtorch/lib/ -ltorch -ltorch_cpu  -lc10
 
 tiny: main_tiny.o
 torch: main_torch.o 
+mnist: mnist.o
 
 train_torch.o:
 	${CC} -c -x cu  train_torch.cpp ${CFLAGS} ${OPT} ${INC_FLAGS} ${TORCH_INC_FLAGS}
@@ -22,6 +23,10 @@ main_tiny.o: train_tiny.o
 main_torch.o: train_torch.o
 	${CC}  image.cu train_torch.o ${CFLAGS} ${OPT} ${INC_FLAGS} ${LD_FLAGS} ${TORCH_LD_FLAGS}  -o ${BIN}
 
+mnist.o:
+	${CC} mnist.cu ${CFLAGS} ${OPT} ${INC_FLAGS} ${LD_FLAGS} -lcurl -lz -o mnist_test
+
 allclean:
 	rm *o
+	rm mnist_test
 	rm ${BIN}
