reinstate gpu shrink to fit, fixes to ukko launch scripts. DGX is still a bit too for CI, A100 placements remain broken.

--- a/.github/workflows/github-ci.yml
+++ b/.github/workflows/github-ci.yml
@@ -247,12 +247,12 @@ jobs:
         with:
           submodules: true
       - name: Make clean
-        run: VLASIATOR_ARCH=ukko_cuda make clean
+        run: VLASIATOR_ARCH=ukko_dgx make clean
       - uses: ursg/gcc-problem-matcher@master
       - name: Compile vlasiator (Testpackage build w/ CUDA)
         run: |
-          export VLASIATOR_ARCH=ukko_cuda
-          srun -Mukko -pgpu-oversub --job-name CI_tp_compile --interactive --nodes=1 -n 1 -c 8 --mem-per-cpu=2G -t 0:20:0 bash -c 'module purge; ml GCC/11.2.0; ml OpenMPI/4.1.1-GCC-11.2.0; ml PMIx/4.1.0-GCCcore-11.2.0; ml PAPI/6.0.0.1-GCCcore-11.2.0; ml CUDA; ml Boost/1.55.0-GCC-11.2.0; export VLASIATOR_ARCH=ukko_cuda; make -j 9 testpackage; sleep 10s'
+          export VLASIATOR_ARCH=ukko_cdgx
+          srun -Mukko -pgpu-oversub --job-name CI_tp_compile --interactive --nodes=1 -n 1 -c 8 --mem-per-cpu=2G -t 0:20:0 bash -c 'module purge; ml OpenMPI/4.1.6.withucx-GCC-13.2.0 PAPI/7.1.0-GCCcore-13.2.0 CUDA/12.6.0; export VLASIATOR_ARCH=ukko_dgx; make -j 9 testpackage; sleep 10s'
       - name: Make sure the output binary is visible in lustre
         uses: nick-fields/retry@v3
         with:
@@ -391,11 +391,11 @@ jobs:
         submodules: true
     - uses: ursg/gcc-problem-matcher@master
     - name: Make clean
-      run: VLASIATOR_ARCH=ukko_cuda make clean
+      run: VLASIATOR_ARCH=ukko_dgx make clean
     - name: Compile tools
       run: |
-          export VLASIATOR_ARCH=ukko_cuda
-          srun -Mukko -pgpu-oversub --job-name CI_tools_compile --interactive --nodes=1 -n 1 -c 1 --mem-per-cpu=2G -t 0:10:0 bash -c 'module purge; ml GCC/11.2.0; ml OpenMPI/4.1.1-GCC-11.2.0; ml PMIx/4.1.0-GCCcore-11.2.0; ml PAPI/6.0.0.1-GCCcore-11.2.0; ml CUDA; ml Boost/1.55.0-GCC-11.2.0; export VLASIATOR_ARCH=ukko_cuda; make vlsvextract vlsvdiff; sleep 10s'
+          export VLASIATOR_ARCH=ukko_dgx
+          srun -Mukko -pgpu-oversub --job-name CI_tools_compile --interactive --nodes=1 -n 1 -c 1 --mem-per-cpu=2G -t 0:10:0 bash -c 'module purge; ml OpenMPI/4.1.6.withucx-GCC-13.2.0 PAPI/7.1.0-GCCcore-13.2.0 CUDA/12.6.0; export VLASIATOR_ARCH=ukko_dgx; make vlsvextract vlsvdiff; sleep 10s'
     - name: Upload tools binaries
       uses: actions/upload-artifact@v4
       with:
@@ -493,7 +493,7 @@ jobs:
   #       chmod +x $GITHUB_WORKSPACE/vlsv*_DP
   #       cd testpackage
   #       export LD_LIBRARY_PATH=$LD_LIBRARY_PATH:$GITHUB_WORKSPACE/libraries/lib
-  #       sbatch -W -o testpackage_run_output.txt ./small_test_ukko_gpu_github_ci.sh
+  #       sbatch -W -o testpackage_run_output.txt ./small_test_ukko_dgx_github_ci.sh
   #       PARSE_OUTPUT_CMD=$( cat << MORO
   #       echo "Job finished, checking output."
   #       cat testpackage_run_output.txt
